language/move-lang/tests/move_check/parser/module_missing_rbrace.exp
error: 

   ┌── tests/move_check/parser/module_missing_rbrace.move:4:1 ───
   │
 4 │ 
   │ ^ Unexpected end-of-file
   ·
 4 │ 
   │ - Expected 'fun'
   │

